--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,29 +1,33 @@
+$react-textarea-tip-height:32px;
 .react-textarea{
   color:#333;
   position: relative;
   border: 1px solid #D1D5DA;
-  padding-bottom: 24px;
+  padding-bottom: $react-textarea-tip-height;
 
   >*{
     box-sizing: border-box;
   }
 
   &-bd{
-    padding:1em;
+    padding:10px;
+    font-size: 16px;
     width:100%;
     min-height: 100px;
+    resize: none;
     &:focus{
       outline: none;
     }
   }
   &-ft{
     font-family: Georgia,Serif;
+    font-size: 20px;
     color:#999;
     position: absolute;
     width:100%;
     text-align: right;
     padding-right: 10px;
-    height:24px;
-    line-height: 24px;
+    height:$react-textarea-tip-height;
+    line-height: $react-textarea-tip-height;
   }
 }
