fix: optimze impl

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -5,7 +5,11 @@
   overflow: hidden;
   background: #fff;
 
-  > .is-half-text {
+  > .is-fulltext {
+    max-height: 4em;
+  }
+
+  > .is-halftext {
     position: relative;
     background: inherit;
     text-align: justify;
